# hider

./: .travis.yml  README.md  Untitled.ipynb  core.py  nb.ipynb  requirements.txt  setup.cfg
src/hider/: core.py  hp.py  image.py  text.py  util.py
tests/: test_core.py
