[metadata]
name = hider
version = 0.1
author = clkr
author_email = clkrv1@gmail.com
description = Image steganography package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cihatceliker/hider
project_urls =
    Bug Tracker = https://github.com/cihatceliker/hider/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src